# writing_cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
src/iiif_stitcher/: __init__.py  cli.py  core.py
tests/: test_cli_resume.py  test_core.py
